execution_engine/build_err.txt
   Compiling cc v1.2.57
    Checking tokio-util v0.7.18
    Checking tower v0.5.3
    Checking tokio-native-tls v0.3.1
    Checking tokio-tungstenite v0.21.0
    Checking tower-http v0.6.8
    Checking h2 v0.4.13
   Compiling cmake v0.1.57
   Compiling aws-lc-sys v0.38.0
    Checking hyper v1.8.1
    Checking hyper-util v0.1.20
   Compiling aws-lc-rs v1.16.1
   Compiling rustls v0.23.37
    Checking rustls-webpki v0.103.9
    Checking tokio-rustls v0.26.4
    Checking rustls-platform-verifier v0.6.2
    Checking hyper-rustls v0.27.7
    Checking reqwest v0.13.2
    Checking execution_engine v0.1.0 (C:\Users\gabri\bongus\bongus_trading_bot\execution_engine)
error[E0425]: cannot find function `thread_rng` in crate `rand`
  --> src\order_manager.rs:76:31
   |
76 |         let jitter_ms = rand::thread_rng().gen_range(500..2500);
   |                               ^^^^^^^^^^ not found in `rand`

warning: unused import: `rand::Rng`
 --> src\order_manager.rs:1:5
  |
1 | use rand::Rng;
  |     ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `execution_engine` (bin "execution_engine") generated 1 warning
error: could not compile `execution_engine` (bin "execution_engine") due to 1 previous error; 1 warning emitted
